k8s/ezmockserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ezmockserver
spec:
  selector:
    matchLabels:
      app: ezmockserver
  serviceName: ezmockserver
  replicas: 1
  template:
    metadata:
      labels:
        app: ezmockserver
    spec:
      containers:
        - name: ezmockserver
          image: trzenaro/ezmockserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
            - containerPort: 3050
            - containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "384Mi"
              cpu: "500m"
          volumeMounts:
            - name: sessions-data
              mountPath: /app/ezmockserver/sessions
            - name: ezmockserver-config
              mountPath: /app/ezmockserver/ezmockserver.json
              subPath: ezmockserverConfig
      volumes:
        - name: sessions-data
          emptyDir: {}
        - name: ezmockserver-config
          configMap:
            name: ezmockserver

---
apiVersion: v1
kind: Service
metadata:
  name: ezmockserver
  labels:
    app: ezmockserver
spec:
  ports:
    - port: 3000
      protocol: TCP
      name: server
      targetPort: 3000
    - port: 3050
      protocol: TCP
      name: api
      targetPort: 3050
    - port: 50051
      protocol: TCP
      name: grpc
      targetPort: 50051
  selector:
    app: ezmockserver

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ezmockserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /ezmockserver/server(/|$)(.*)
            backend:
              serviceName: ezmockserver
              servicePort: 3000
            pathType: Prefix
          - path: /ezmockserver/api(/|$)(.*)
            backend:
              serviceName: ezmockserver
              servicePort: 3050
            pathType: Prefix
